<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MusicJunky</string>
    
    <string name="action_settings">Settings</string>
    <string name="action_navigation">Navigation</string>
    
    <string name="more_options">More Options</string>
    
    <string name="album_art">Album Art</string>
      
    <!-- Media Controls -->
	<string name="action_play_pause">Play or Pause</string>
	<string name="action_previous">Previous</string>
	<string name="action_next">Next</string>
	<string name="action_shuffle">Shuffle</string>
	<string name="action_repeat">Repeat</string>
	
	<!-- menu -->
	<string name="action_search">Search</string>
	<string name="action_equalizer">Equalizer</string>
	
	<!-- player menu -->
	<string name="action_show_queue_list">Show Queue</string>
    <string name="action_clear_queue_list">Clear Queue</string>
    <string name="action_add_playlist">Add to Playlist</string>
    <string name="action_go_to_artist">Go to Artist</string>
    <string name="action_go_to_album">Go to Album</string>
	
</resources>
