<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="#eae8e7" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true" >

            <TextView
                android:id="@+id/song_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="You Make Me"
                android:textColor="#afaeaf"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/artist_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/song_title"
                android:layout_centerHorizontal="true"
                android:text="Avicii"
                android:textColor="@color/secondary_media_controller"
                android:textSize="16sp" />
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/album_art_layout"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/player_functions"
        android:layout_below="@+id/titlebar" >

        <ImageView
            android:id="@+id/album_art"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:contentDescription="@string/album_art"
            android:src="@drawable/albumart"
            android:scaleType="centerCrop" >
        </ImageView>

        <TextView
            android:id="@+id/big_song_pos"
            android:background="@drawable/main_timer"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/album_art"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-60dp"
            android:textColor="@android:color/white"
            android:textSize="36sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/player_functions"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/player_background"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/secondary_media_controller"
            android:orientation="horizontal"
            android:weightSum="3" >

            <ImageButton
                android:id="@+id/shuffle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/secondary_media_controller"
                android:contentDescription="@string/action_shuffle"
                android:src="@drawable/shuffle_inactive" />

            <ImageButton
                android:id="@+id/favorites"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/media_button_secondary" />

            <ImageButton
                android:id="@+id/repeat"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/secondary_media_controller"
                android:contentDescription="@string/action_repeat"
                android:src="@drawable/repeat_inactive" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/seekbar_background" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true" >

                <TextView
                    android:id="@+id/currentPos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:text="1:50"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/endPos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5dp"
                    android:text="3:23"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="12sp" />

                <SeekBar
                    android:id="@+id/media_seekbar"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/endPos"
                    android:layout_toRightOf="@+id/currentPos"
                    android:progressDrawable="@drawable/seekbar_progress"
                    android:thumb="@drawable/seekbar_thumb" />
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/media_controller"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="#eae8e7" >

            <ImageButton
                android:id="@+id/play_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerInParent="true"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/circle_button"
                android:contentDescription="@string/action_play_pause"
                android:onClick="onPlayPause"
                android:src="@drawable/play" />

            <ImageButton
                android:id="@+id/previous_btn"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/play_btn"
                android:background="@drawable/circle_button"
                android:contentDescription="@string/action_previous"
                android:src="@drawable/previous" />

            <ImageButton
                android:id="@+id/next_btn"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/play_btn"
                android:background="@drawable/circle_button"
                android:contentDescription="@string/action_next"
                android:src="@drawable/next" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>