<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eae8e7"
    android:orientation="vertical"
    android:padding="@dimen/page_margin" >

    <ImageButton 
        android:id="@+id/edit_song"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:paddingBottom="@dimen/padding_4dp"
        android:paddingTop="@dimen/padding_4dp"
        android:src="@drawable/ic_action_edit"
        style="?android:borderlessButtonStyle"/>
    
    <RelativeLayout
        android:id="@+id/album_art_layout"
        android:layout_width="match_parent"
        android:layout_height="fill_parent" >

        <ImageView
            android:id="@+id/album_art"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:contentDescription="@string/album_art"
            android:scaleType="centerCrop"
            android:src="@drawable/albumart" >
        </ImageView>

        <ImageButton
            android:id="@+id/repeat_btn"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:padding="@dimen/padding_8dp"
            android:src="@drawable/repeat_inactive" />

        <ImageButton
            android:id="@+id/shuffle_btn"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:padding="@dimen/padding_8dp"
            android:src="@drawable/shuffle_inactive" />

        <!-- we should create a floating menu sometime -->

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/player_functions"
        android:layout_width="match_parent"
        android:layout_height="124dp"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/titlebar"
            android:layout_width="match_parent"
            android:layout_height="72dp" >

            <TextView
                android:id="@+id/song_title"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_centerHorizontal="true"
                android:paddingBottom="@dimen/padding_4dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="@dimen/padding_8dp"
                android:textColor="#000000"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/artist_name"
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:layout_below="@+id/song_title"
                android:layout_centerHorizontal="true"
                android:paddingBottom="@dimen/padding_8dp"
                android:paddingTop="@dimen/padding_4dp"
                android:textColor="#000000"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp" >

            <TextView
                android:id="@+id/currentPos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:textColor="@android:color/darker_gray"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/endPos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:textColor="@android:color/darker_gray"
                android:textSize="12sp" />

            <SeekBar
                android:id="@+id/media_seekbar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/endPos"
                android:layout_toRightOf="@+id/currentPos"
                android:progressDrawable="@drawable/seekbar_progress"
                android:thumb="@drawable/seekbar_thumb" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/media_controller"
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:background="#eae8e7" >

            <ImageButton
                android:id="@+id/play_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerInParent="true"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/circle_button"
                android:contentDescription="@string/action_play_pause"
                android:onClick="onPlayPause"
                android:src="@drawable/play" />

            <ImageButton
                android:id="@+id/previous_btn"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/play_btn"
                android:background="@drawable/circle_button"
                android:contentDescription="@string/action_previous"
                android:src="@drawable/previous" />

            <ImageButton
                android:id="@+id/next_btn"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/play_btn"
                android:background="@drawable/circle_button"
                android:contentDescription="@string/action_next"
                android:src="@drawable/next" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>